--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
+	<title>IIFE</title>
 	<link rel="stylesheet" href="">
 </head>
 <body>
-<<script src="main.js" type="text/javascript" charset="utf-8" async defer></script>
+<h1>Sedan IIFE</h1>
+
+<script src="Sedan.js" type="text/javascript"></script>
+
+<script src="Sedan-Augmented.js" type="text/javascript"></script>
+<script src="main.js" type="text/javascript"></script>
+
 </body>
 </html>
